# kedro-light

./: .gitignore  404.html  LICENSE  Makefile  README.md  index.html  lint.cfg  mkdocs.yml  pyproject.toml  setup.cfg  setup.py  sitemap.xml  zensical.toml
.github/workflow/: docs.yml
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: index.html  index.md  installation.md  kedro.html  kedro_viz.html  usage.md
example/iris_analysis/data/base/: catalog.yaml
example/iris_analysis/eda/: 01_analysis.py
installation/: index.html
kedro_light/: __init__.py  convenience.py  kedro.py  kedro_viz.py
usage/: index.html
