[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
authors = [{name = "Elliott Wise", email = "ell.wise@gmail.com"}]
description = "A lightweight interface to Kedro and Kedro-Viz"
dependencies = ["kedro", "kedro-viz"]
license = {file = "LICENSE"}
name = "kedro-light"
readme = "README.md"
version = "2023.03.13"

[project.optional-dependencies]
api = ["kedro[api]"]
biosequence = ["kedro[biosequence]"]
dask = ["kedro[dask]"]
dev = ["black", "build", "isort", "mkdocs-material", "pip-tools", "ruff", "twine"]
docs = ["kedro[docs]"]
geopandas = ["kedro[geopandas]"]
matplotlib = ["kedro[matplotlib]"]
holoviews = ["kedro[holoviews]"]
networkx = ["kedro[networkx]"]
pandas = ["kedro[pandas]"]
pillow = ["kedro[pillow]"]
plotly = ["kedro[plotly]"]
redis = ["kedro[redis]"]
spark = ["kedro[spark]"]
tensorflow = ["kedro[tensorflow]"]
yaml = ["kedro[yaml]"]

[project.urls]
source = "https://github.com/ellwise/kedro-light"
docs = "https://ellwise.github.io/kedro-light"

[tool.black]
line-length = 99

[tool.isort]
profile = "black"

[tool.ruff]
ignore-init-module-imports = true
line-length = 99

[tool.setuptools]
packages = ["kedro_light"]
