[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
authors = [{name = "Elliott Wise", email = "ell.wise@gmail.com"}]
description = "A lightweight interface to Kedro and Kedro-Viz"
dependencies = ["kedro", "kedro-viz"]
license = {file = "LICENSE"}
name = "kedro-light"
readme = "README.md"
requires-python = ">=3.11"
version = "2026.06.22"

[project.optional-dependencies]
api = ["kedro-datasets[api]"]
biosequence = ["kedro-datasets[biosequence]"]
dask = ["kedro-datasets[dask]"]
docs = ["kedro[docs]"]
geopandas = ["kedro-datasets[geopandas]"]
matplotlib = ["kedro-datasets[matplotlib]"]
holoviews = ["kedro-datasets[holoviews]"]
networkx = ["kedro-datasets[networkx]"]
pandas = ["kedro-datasets[pandas]"]
pillow = ["kedro-datasets[pillow]"]
plotly = ["kedro-datasets[plotly]"]
redis = ["kedro-datasets[redis]"]
spark = ["kedro-datasets[spark]"]
tensorflow = ["kedro-datasets[tensorflow]"]
yaml = ["kedro-datasets[yaml]"]

[project.urls]
source = "https://github.com/ellwise/kedro-light"
docs = "https://ellwise.github.io/kedro-light"

[dependency-groups]
dev = ["ruff", "zensical"]
example = ["kaleido", "kedro-datasets[pandas,yaml]", "plotly", "scikit-learn"]

[tool.ruff]
line-length = 99

[tool.setuptools]
packages = ["kedro_light"]
